Fix rarity color contrast (accessibility)

--- a/frontend/src/assets/css/common.css
+++ b/frontend/src/assets/css/common.css
@@ -7,15 +7,15 @@
 }
 
 .unique, .unique a {
-  color: #0070dd
+  color: #5baeff
 }
 
 .epic, .epic a {
-  color: #a335ee
+  color: #d18dff
 }
 
 .hero, .hero a {
-  color: #ff8000
+  color: #ff8b16
 }
 
 .special, .special a {
